--- a/package.json
+++ b/package.json
@@ -10,7 +10,18 @@
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
-    "debug": "~2.0.0"
+    "debug": "~2.0.0",
+
+    "passport": "~0.2.1",
+    "passport-local": "~1.0.0",
+
+    "asyncawait": "~0.7.2",
+
+    "sequelize": "~2.0.0",
+    "sequelize-cli": "~0.3.3",
+
+    "cors": "~2.4.2",
+
+    "sqlite3": "~3.0.2"
   }
 }
