--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "morgan": "~1.3.0",
     "debug": "~2.0.0",
 
+    "jade": "~1.7.0",
+
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
 
@@ -22,6 +24,9 @@
 
     "cors": "~2.4.2",
 
-    "sqlite3": "~3.0.2"
+    "sqlite3": "~3.0.2",
+
+    "paypal-rest-sdk": "~1.1.0",
+    "multer": "~0.1.6"
   }
 }
