--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "morgan": "~1.3.0",
+    "multer": "~0.1.6",
     "debug": "~2.0.0",
 
     "jade": "~1.7.0",
@@ -17,16 +18,15 @@
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
 
-    "asyncawait": "~0.7.2",
-
     "sequelize": "~2.0.0",
     "sequelize-cli": "~0.3.3",
 
     "cors": "~2.4.2",
 
+    "crypto-js": "~3.1.2-5",
+
     "sqlite3": "~3.0.2",
 
-    "paypal-rest-sdk": "~1.1.0",
-    "multer": "~0.1.6"
+    "paypal-rest-sdk": "~1.1.0"
   }
 }
