--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "~4.9.0",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
+    "cookie-session": "~1.0.2",
     "morgan": "~1.3.0",
     "multer": "~0.1.6",
     "debug": "~2.0.0",
