--- a/package.json
+++ b/package.json
@@ -13,21 +13,15 @@
     "morgan": "~1.3.0",
     "multer": "~0.1.6",
     "debug": "~2.0.0",
-
     "jade": "~1.7.0",
-
     "passport": "~0.2.1",
     "passport-local": "~1.0.0",
-
-    "sequelize": "~2.0.0",
+    "sequelize": "^2.0.0-rc1",
     "sequelize-cli": "~0.3.3",
-
     "cors": "~2.4.2",
-
     "crypto-js": "~3.1.2-5",
-
     "sqlite3": "~3.0.2",
-
-    "paypal-rest-sdk": "~1.1.0"
+    "paypal-rest-sdk": "~1.1.0",
+    "pg": "^3.5.0"
   }
 }
